fix bug copy tooltip overflow

--- a/src/app/pages/token/token-detail/token-content/token-content-tab/token-transfers-tab/token-transfers-tab.component.scss
+++ b/src/app/pages/token/token-detail/token-content/token-content-tab/token-transfers-tab/token-transfers-tab.component.scss
@@ -69,3 +69,8 @@
     text-transform: initial;
   }
 }
+
+.spacer-tooltip--sm {
+  padding-top: 20px;
+  margin-top: -20px;
+}
