--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -444,8 +444,3 @@ input:-webkit-autofill:active {
   padding-top: 100px;
   margin-top: -100px;
 }
-
-.spacer-tooltip-2 {
-  padding-top: 20px;
-  margin-top: -20px;
-}
